Adds filtering capabilities to tables
Adds filter functionality to the table views.

The filtering is implemented using FilterCondition objects which contain the SQL fragment and corresponding parameters.
Each model now implements a getFilterField() method to define its id field.

A FilteredCrudTableViewController class is introduced to streamline table views that support filtering.